--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/usr/local/miniconda3/bin/python"
+    "python.pythonPath": "/usr/local/miniconda3/bin/python",
+    "python.formatting.provider": "yapf"
 }
