Huge amount of Update which includes Core, ML and WEB

--- a/src/core/.env
+++ b/src/core/.env
@@ -4,4 +4,7 @@ BIKE_TOKEN=92be62130be380ad2925b05fc3b1e5b3ef1a5a55
 DB_NAME=team9
 DB_USERNAME=team9
 DB_PASSWD=team9
-DB_HOST=46.101.83.10
+DB_HOST=localhost
+DB_PORT=5984
+ML_HOST=localhost
+ML_PORT=9000
