--- a/src/core/package.json
+++ b/src/core/package.json
@@ -4,7 +4,7 @@
   "description": "the backend ",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "mocha",
     "debug": "mocha"
   },
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/algo4/open-bike#readme",
   "dependencies": {
-    "pg": "^7.9.0",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^5.2.11"
+    "axios": "^0.18.0",
+    "nano": "^8.0.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
