--- a/src/core/package.json
+++ b/src/core/package.json
@@ -4,7 +4,7 @@
   "description": "the backend ",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "mocha",
     "debug": "mocha"
   },
